--- a/bigdata-protal/src/main/resources/templates/main.html
+++ b/bigdata-protal/src/main/resources/templates/main.html
@@ -122,11 +122,11 @@
 				<tbody>
 					<tr>
 						<td>当前版本</td>
-						<td class="version"></td>
+						<td class="version">1.0-bate</td>
 					</tr>
 					<tr>
 						<td>开发作者</td>
-						<td class="author"></td>
+						<td class="author">biglsmsp</td>
 					</tr>
 					<tr>
 						<td>网站首页</td>
