--- a/bigdata-protal/src/main/resources/templates/index.html
+++ b/bigdata-protal/src/main/resources/templates/index.html
@@ -133,7 +133,7 @@
 	<!-- 锁屏 -->
 	<div class="admin-header-lock" id="lock-box" style="display: none;">
 		<div class="admin-header-lock-img"><img src="/images/face.jpg"/></div>
-		<div class="admin-header-lock-name" id="lockUserName">请叫我马哥</div>
+		<div class="admin-header-lock-name" id="lockUserName">大数据后台开发</div>
 		<div class="input_btn">
 			<input type="password" class="admin-header-lock-input layui-input" placeholder="请输入密码解锁.." name="lockPwd" id="lockPwd" />
 			<button class="layui-btn" id="unlock">解锁</button>
