--- a/bigdata-protal/src/main/resources/templates/ruler/rulersList.html
+++ b/bigdata-protal/src/main/resources/templates/ruler/rulersList.html
@@ -25,7 +25,7 @@
         <a class="layui-btn layui-btn-normal newsAdd_btn"><i class="layui-icon">&#xe654;添加规则</i></a>
     </div>
     <div class="layui-inline">
-        <a class="layui-btn newsAdd_btn" href="/ruler/download" target="_blank"><i
+        <a class="layui-btn" href="/ruler/download" target="_blank"><i
                 class="layui-icon">&#xe601;导出数据</i></a>
     </div>
     <div class="layui-inline">
